test/1.2/errors/T_ENODEV.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
/// ERROR EDEVICE
